<resources>
    <string name="app_name">Bob</string>
    <string name="back_to_login">Back to login</string>
    <string name="username">Username:</string>
    <string name="register">Register</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="user_type">User Type:</string>
    <string name="email">Email:</string>
    <string name="logout_bt">Logout</string>
    <string name="view_location">View</string>
    <string name="view_info">View Info</string>
    <string name="edit">Edit</string>
    <string name="type">Type</string>
    <string name="color">Color</string>
    <string name="id">ID</string>
    <string name="price">Price</string>
    <string name="back">Return</string>
    <string name="delete">Delete</string>
    <string name="title_activity_maps">Map</string>
    <string name="category">Category</string>

<!-- added facebook login stuff -->
    <string name="facebook_app_id">293524841279421</string>
    <string name="fb_login_protocol_scheme">fb293524841279421</string>
<!-- end of facebook stuff -->

</resources>
